--- a/app/assets/stylesheets/schedules.scss
+++ b/app/assets/stylesheets/schedules.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the schedules controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.detail {
+  width: 300px;
+  height: 7em;
+  line-height: 1.5em;
+}
+
+.button {
+  font-size: 1.4em;
+  font-weight: bold;
+  padding: 10px 30px;
+}
