--- a/app/assets/stylesheets/schedules.scss
+++ b/app/assets/stylesheets/schedules.scss
@@ -2,14 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.detail {
-  width: 300px;
-  height: 7em;
-  line-height: 1.5em;
-}
-
-.button {
-  font-size: 1.4em;
+#schedules ul li {
+  font-size: 20px;
   font-weight: bold;
-  padding: 10px 30px;
 }
