--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,24 @@
 
   <body>
     <header>
-      <nav>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <% if user_signed_in? %>
-          <%= link_to 'プロフィール変更', edit_user_registration_path %>
-          <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+          <ul class="navbar-nav mr-auto">
+            <li><%= link_to 'プロフィール変更', edit_user_registration_path, class: "nav-link" %></li>
+            <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "nav-link" %></li>
+          </ul>
         <% else %>
-          <%= link_to 'サインアップ', new_user_registration_path %>
-          <%= link_to 'ログイン', new_user_session_path %>
+          <ul class="navbar-nav mr-auto">
+            <li><%= link_to 'サインアップ', new_user_registration_path, class: "nav-link" %></li>
+            <li><%= link_to 'ログイン', new_user_session_path, class: "nav-link" %></li>
+          </ul>
         <% end %>
       </nav>
     </header>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
