--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -6,12 +6,18 @@
   <% end %>
 <% end %>
 
-<%= form_with model: @schedule, local: true do |f| %>
-  <div id="datetimepicker"></div><br />
-  <%= f.hidden_field :start_date_time %>
-  <%= f.label :detail %><br />
-  <%= f.text_area :detail, :class=> "detail" %><br />
-  <%= f.submit '新規登録', :class=> "button"  %>
-<% end %>
+<div class="row">
+  <div class="col-md-6">
+    <%= form_with model: @schedule, local: true do |f| %>
+      <div id="datetimepicker"></div><br />
+      <%= f.hidden_field :start_date_time %>
+      <%= f.label :detail %><br />
+      <%= f.text_area :detail, :class=> "form-control" %><br />
+      <%= f.submit '新規登録', :class=> "btn btn-primary float-right"  %>
+    <% end %>
+  </div>
 
-<%= render :partial => "schedules", :locals => { schedules: @schedules } %>
+  <div class="col-md-6">
+    <%= render :partial => "schedules", :locals => { schedules: @schedules } %>
+  </div>
+</div>
